--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
 
